CSS for .exclude

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,9 @@
 .xx-large {
     font-size: xx-large;
 }
+
+.exclude {
+    border-radius: 8px;
+    border: 1px solid lightgray;
+    padding: 16px;
+}
